{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 10,
  "lineage": "8573f12a-f2f8-44e8-089c-73896676c01c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0cbca1aa2a24ce2a1",
            "arn": "arn:aws:ec2:us-east-1:686699774218:instance/i-02effca53ac4da9fc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02effca53ac4da9fc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Penchal_June_26",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-08d29d515c577b9c9"
              }
            ],
            "primary_network_interface_id": "eni-08d29d515c577b9c9",
            "private_dns": "ip-10-0-1-208.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.208",
            "public_dns": "ec2-13-220-185-62.compute-1.amazonaws.com",
            "public_ip": "13.220.185.62",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0766e6d76a5ec65ec",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0214561efe51f236a",
            "tags": {
              "Name": "WebServerInstance-Penchal"
            },
            "tags_all": {
              "Name": "WebServerInstance-Penchal"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06f120a95100d5019"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "id": "i-02effca53ac4da9fc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ec2_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.my_vpc",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686699774218:internet-gateway/igw-0ff6b0511cb4f7c6a",
            "id": "igw-0ff6b0511cb4f7c6a",
            "owner_id": "686699774218",
            "region": "us-east-1",
            "tags": {
              "Name": "InternetGateway-Penchal"
            },
            "tags_all": {
              "Name": "InternetGateway-Penchal"
            },
            "vpc_id": "vpc-0e3ba2c076fa0d451"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "id": "igw-0ff6b0511cb4f7c6a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686699774218:route-table/rtb-0153ad9d8347ac56c",
            "id": "rtb-0153ad9d8347ac56c",
            "owner_id": "686699774218",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ff6b0511cb4f7c6a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRouteTable-Penchal"
            },
            "tags_all": {
              "Name": "PublicRouteTable-Penchal"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3ba2c076fa0d451"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "id": "rtb-0153ad9d8347ac56c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ebd00456d7f93c1",
            "region": "us-east-1",
            "route_table_id": "rtb-0153ad9d8347ac56c",
            "subnet_id": "subnet-0214561efe51f236a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "id": "rtbassoc-08ebd00456d7f93c1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686699774218:security-group/sg-06f120a95100d5019",
            "description": "Allow SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06f120a95100d5019",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere (for lab purposes; restrict in production)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "EC2SecurityGroup-Penchal",
            "name_prefix": "",
            "owner_id": "686699774218",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EC2SecurityGroup-Penchal"
            },
            "tags_all": {
              "Name": "EC2SecurityGroup-Penchal"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3ba2c076fa0d451"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "id": "sg-06f120a95100d5019",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686699774218:subnet/subnet-0214561efe51f236a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0214561efe51f236a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "686699774218",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "PublicSubnet-Penchal"
            },
            "tags_all": {
              "Name": "PublicSubnet-Penchal"
            },
            "vpc_id": "vpc-0e3ba2c076fa0d451"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "id": "subnet-0214561efe51f236a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:686699774218:vpc/vpc-0e3ba2c076fa0d451",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07d40024d45f5f904",
            "default_route_table_id": "rtb-02d30411409ceda88",
            "default_security_group_id": "sg-0a32dfb305be4843b",
            "dhcp_options_id": "dopt-0d5b6b21a0df85bf4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e3ba2c076fa0d451",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02d30411409ceda88",
            "owner_id": "686699774218",
            "region": "us-east-1",
            "tags": {
              "Name": "MyVPC-Penchal"
            },
            "tags_all": {
              "Name": "MyVPC-Penchal"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "id": "vpc-0e3ba2c076fa0d451",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}